crates/nash-can/src/snapshots/nash_can__module__tests__module_shell_with_imported_qualified_union_types.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (Wrapped)\n\nimport Result\n\ntype alias Wrapped e a = Result.Result e a\n"
---
Module {
    name: ModuleName {
        package: None,
        name: "Main",
    },
    exports: Explicit(
        [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 23,
                    },
                    end: Position {
                        line: 1,
                        column: 30,
                    },
                },
                value: Alias(
                    "Wrapped",
                ),
            },
        ],
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 6,
                column: 1,
            },
        },
    ),
    decls: Empty,
    unions: [],
    aliases: [
        Located {
            region: Region {
                start: Position {
                    line: 5,
                    column: 1,
                },
                end: Position {
                    line: 6,
                    column: 1,
                },
            },
            value: Alias {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 5,
                            column: 12,
                        },
                        end: Position {
                            line: 5,
                            column: 19,
                        },
                    },
                    value: "Wrapped",
                },
                parameters: [
                    "e",
                    "a",
                ],
                typ: Located {
                    region: Region {
                        start: Position {
                            line: 5,
                            column: 26,
                        },
                        end: Position {
                            line: 5,
                            column: 43,
                        },
                    },
                    value: Named {
                        reference: QualifiedName {
                            home: ModuleName {
                                package: None,
                                name: "Result",
                            },
                            name: "Result",
                        },
                        args: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 5,
                                        column: 40,
                                    },
                                    end: Position {
                                        line: 5,
                                        column: 41,
                                    },
                                },
                                value: Var(
                                    "e",
                                ),
                            },
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 5,
                                        column: 42,
                                    },
                                    end: Position {
                                        line: 5,
                                        column: 43,
                                    },
                                },
                                value: Var(
                                    "a",
                                ),
                            },
                        ],
                    },
                },
            },
        },
    ],
    binops: [],
}
