crates/nash-can/src/snapshots/nash_can__module__tests__module_shell_with_local_named_types.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (Pair, WrappedPair, WrappedMaybe, Maybe(..))\n\ntype alias Pair a b = (a, b)\n\ntype alias WrappedPair a b = Pair a b\n\ntype alias WrappedMaybe a = Maybe a\n\ntype Maybe a\n    = Just a\n    | Nothing\n"
---
Module {
    name: ModuleName {
        package: None,
        name: "Main",
    },
    exports: Explicit(
        [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 56,
                    },
                    end: Position {
                        line: 1,
                        column: 61,
                    },
                },
                value: UnionOpen(
                    "Maybe",
                ),
            },
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 23,
                    },
                    end: Position {
                        line: 1,
                        column: 27,
                    },
                },
                value: Alias(
                    "Pair",
                ),
            },
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 42,
                    },
                    end: Position {
                        line: 1,
                        column: 54,
                    },
                },
                value: Alias(
                    "WrappedMaybe",
                ),
            },
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 29,
                    },
                    end: Position {
                        line: 1,
                        column: 40,
                    },
                },
                value: Alias(
                    "WrappedPair",
                ),
            },
        ],
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 12,
                column: 1,
            },
        },
    ),
    decls: Empty,
    unions: [
        Located {
            region: Region {
                start: Position {
                    line: 9,
                    column: 1,
                },
                end: Position {
                    line: 12,
                    column: 1,
                },
            },
            value: Union {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 9,
                            column: 6,
                        },
                        end: Position {
                            line: 9,
                            column: 11,
                        },
                    },
                    value: "Maybe",
                },
                parameters: [
                    "a",
                ],
                ctors: [
                    Ctor {
                        name: "Just",
                        index: 0,
                        arity: 1,
                        arguments: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 10,
                                        column: 12,
                                    },
                                    end: Position {
                                        line: 10,
                                        column: 13,
                                    },
                                },
                                value: Var(
                                    "a",
                                ),
                            },
                        ],
                    },
                    Ctor {
                        name: "Nothing",
                        index: 1,
                        arity: 0,
                        arguments: [],
                    },
                ],
                alternatives: 2,
                options: Normal,
            },
        },
    ],
    aliases: [
        Located {
            region: Region {
                start: Position {
                    line: 3,
                    column: 1,
                },
                end: Position {
                    line: 5,
                    column: 1,
                },
            },
            value: Alias {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 12,
                        },
                        end: Position {
                            line: 3,
                            column: 16,
                        },
                    },
                    value: "Pair",
                },
                parameters: [
                    "a",
                    "b",
                ],
                typ: Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 23,
                        },
                        end: Position {
                            line: 3,
                            column: 29,
                        },
                    },
                    value: Tuple {
                        first: Located {
                            region: Region {
                                start: Position {
                                    line: 3,
                                    column: 24,
                                },
                                end: Position {
                                    line: 3,
                                    column: 25,
                                },
                            },
                            value: Var(
                                "a",
                            ),
                        },
                        second: Located {
                            region: Region {
                                start: Position {
                                    line: 3,
                                    column: 27,
                                },
                                end: Position {
                                    line: 3,
                                    column: 28,
                                },
                            },
                            value: Var(
                                "b",
                            ),
                        },
                        rest: [],
                    },
                },
            },
        },
        Located {
            region: Region {
                start: Position {
                    line: 5,
                    column: 1,
                },
                end: Position {
                    line: 7,
                    column: 1,
                },
            },
            value: Alias {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 5,
                            column: 12,
                        },
                        end: Position {
                            line: 5,
                            column: 23,
                        },
                    },
                    value: "WrappedPair",
                },
                parameters: [
                    "a",
                    "b",
                ],
                typ: Located {
                    region: Region {
                        start: Position {
                            line: 5,
                            column: 30,
                        },
                        end: Position {
                            line: 5,
                            column: 38,
                        },
                    },
                    value: Alias {
                        reference: QualifiedName {
                            home: ModuleName {
                                package: None,
                                name: "Main",
                            },
                            name: "Pair",
                        },
                        arguments: [
                            AliasArgument {
                                name: "a",
                                typ: Located {
                                    region: Region {
                                        start: Position {
                                            line: 5,
                                            column: 35,
                                        },
                                        end: Position {
                                            line: 5,
                                            column: 36,
                                        },
                                    },
                                    value: Var(
                                        "a",
                                    ),
                                },
                            },
                            AliasArgument {
                                name: "b",
                                typ: Located {
                                    region: Region {
                                        start: Position {
                                            line: 5,
                                            column: 37,
                                        },
                                        end: Position {
                                            line: 5,
                                            column: 38,
                                        },
                                    },
                                    value: Var(
                                        "b",
                                    ),
                                },
                            },
                        ],
                        target: Open(
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 3,
                                        column: 23,
                                    },
                                    end: Position {
                                        line: 3,
                                        column: 29,
                                    },
                                },
                                value: Tuple {
                                    first: Located {
                                        region: Region {
                                            start: Position {
                                                line: 3,
                                                column: 24,
                                            },
                                            end: Position {
                                                line: 3,
                                                column: 25,
                                            },
                                        },
                                        value: Var(
                                            "a",
                                        ),
                                    },
                                    second: Located {
                                        region: Region {
                                            start: Position {
                                                line: 3,
                                                column: 27,
                                            },
                                            end: Position {
                                                line: 3,
                                                column: 28,
                                            },
                                        },
                                        value: Var(
                                            "b",
                                        ),
                                    },
                                    rest: [],
                                },
                            },
                        ),
                    },
                },
            },
        },
        Located {
            region: Region {
                start: Position {
                    line: 7,
                    column: 1,
                },
                end: Position {
                    line: 9,
                    column: 1,
                },
            },
            value: Alias {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 7,
                            column: 12,
                        },
                        end: Position {
                            line: 7,
                            column: 24,
                        },
                    },
                    value: "WrappedMaybe",
                },
                parameters: [
                    "a",
                ],
                typ: Located {
                    region: Region {
                        start: Position {
                            line: 7,
                            column: 29,
                        },
                        end: Position {
                            line: 7,
                            column: 36,
                        },
                    },
                    value: Named {
                        reference: QualifiedName {
                            home: ModuleName {
                                package: None,
                                name: "Main",
                            },
                            name: "Maybe",
                        },
                        args: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 7,
                                        column: 35,
                                    },
                                    end: Position {
                                        line: 7,
                                        column: 36,
                                    },
                                },
                                value: Var(
                                    "a",
                                ),
                            },
                        ],
                    },
                },
            },
        },
    ],
    binops: [],
}
