crates/nash-can/src/snapshots/nash_can__module__tests__multiple_unbound_union_vars.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntype Foo\n    = Bar a b\n"
---
[
    TypeVarsUnboundInUnion {
        region: Region {
            start: Position {
                line: 3,
                column: 1,
            },
            end: Position {
                line: 5,
                column: 1,
            },
        },
        name: "Foo",
        args: [],
        unbound: (
            "a",
            Region {
                start: Position {
                    line: 4,
                    column: 11,
                },
                end: Position {
                    line: 4,
                    column: 12,
                },
            },
        ),
        more_unbound: [
            (
                "b",
                Region {
                    start: Position {
                        line: 4,
                        column: 13,
                    },
                    end: Position {
                        line: 4,
                        column: 14,
                    },
                },
            ),
        ],
    },
]
